Anchor ToolbarActionView context menu correctly

Makes ToolbarActionView::DoShowContextMenu use GetAnchorBoundsInScreen
which insets into the view to match the visible inkdrop hover effects.

Bug: chromium:800372
Change-Id: Ibe2bfe93547bae75590c87214e2c1ed0b73aa37b
Reviewed-on: https://chromium-review.googlesource.com/c/1281919
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600124}
Former-commit-id: 1d1b230e8e6f2e18058273dec7d9b5770f3871db